--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,7 +13,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left" class="main-menu" expose-aside-when="large">
-    <ion-content>
+    <ion-content class="main-menu-content">
       <ion-list>
         <ion-item class="heading-item item item-avatar" nav-clear menu-close ui-sref="#">
 
@@ -26,7 +26,7 @@
             </pre-img>
           </div>
 
-          <h2 class="greeting text-right ">פלאפון</h2>
+          <h2 class="dis-greeting text-right ">פלאפון</h2>
           <p class="message text-right">תקשורת בע"מ</p>
         </ion-item>
 
@@ -44,7 +44,7 @@
           <h2 class="menu-text text-right">הגדרות</h2>
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.phonebook" ui-sref-opts="{reload: true}">
-         <i class="icon ion-gear-a"></i>
+         <i class="icon ion-ios-telephone"></i>
          <h2 class="menu-text text-right">אלפון</h2>
        </ion-item>
       </ion-list>
