--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -35,7 +35,7 @@
           <div class="pele_rtl">סביבה:{{appSettings.env}} - V{{appSettings.config.APP_VERSION}} </div>
           <div class="pele_rtl">משתמש: {{appSettings.config.userName}}</div>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.p1_appsLists"  ui-sref-opts="{reload: true}">
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.p1_appsLists" ui-sref-opts="{reload: true}">
           <i class="icon ion-document"></i>
           <h2 class="menu-text text-right">בחירת אפליקציה</h2>
         </ion-item>
@@ -44,9 +44,13 @@
           <h2 class="menu-text text-right">הגדרות</h2>
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.phonebook" ui-sref-opts="{reload: true}">
-         <i class="icon ion-ios-telephone"></i>
-         <h2 class="menu-text text-right">אלפון</h2>
-       </ion-item>
+          <i class="icon ion-ios-telephone"></i>
+          <h2 class="menu-text text-right">אלפון</h2>
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.lead" ui-sref-opts="{reload: true}">
+          <i class="icon ion-ios-star"></i>
+          <h2 class="menu-text text-right">לידים</h2>
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
