--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -43,11 +43,11 @@
           <i class="icon ion-gear-a"></i>
           <h2 class="menu-text text-right">הגדרות</h2>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.phonebook" ui-sref-opts="{reload: true}">
+        <ion-item ng-if="0" class="item-icon-left" nav-clear menu-close ui-sref="app.phonebook" ui-sref-opts="{reload: true}">
           <i class="icon ion-ios-telephone"></i>
           <h2 class="menu-text text-right">אלפון</h2>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.lead" ui-sref-opts="{reload: true}">
+        <ion-item ng-if="0" class="item-icon-left" nav-clear menu-close ui-sref="app.lead" ui-sref-opts="{reload: true}">
           <i class="icon ion-ios-star"></i>
           <h2 class="menu-text text-right">לידים</h2>
         </ion-item>
