--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -20,13 +20,13 @@
     <div class="apps-front-menu">
       <div class="menu-item" ng-repeat="category in feeds_categories.menuItems">
 
-        <button ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)" class="button button-large button-stable button-block">
+        <button ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName,category)" class="button button-large button-stable button-block">
          <img class="menu-item-icon" ng-src="{{category.Image}}" />    {{category.DisplayName}}
         </button>
       </div>
     </div>
     <div ng-if="0" class="row row-bottom" ng-repeat="category in feeds_categories.menuItems">
-      <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)" ng-model="btn_class.on_release" on-touch="category.PUSH_FLAG = !category.PUSH_FLAG" on-release="category.PUSH_FLAG = !category.PUSH_FLAG">
+      <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName,category)" ng-model="btn_class.on_release" on-touch="category.PUSH_FLAG = !category.PUSH_FLAG" on-release="category.PUSH_FLAG = !category.PUSH_FLAG">
         <div class="col col-10"></div>
         <div class="col col-80 item item-icon-right {{pushBtnClass(category.PUSH_FLAG)}}">
           <div class="row row-center ">
