--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -47,7 +47,7 @@
           <i class="icon ion-ios-telephone"></i>
           <h2 class="menu-text text-right">אלפון</h2>
         </ion-item>
-        <ion-item ng-if="0" class="item-icon-left" nav-clear menu-close ui-sref="app.lead" ui-sref-opts="{reload: true}">
+        <ion-item ng-if="1" class="item-icon-left" nav-clear menu-close ui-sref="app.leads" ui-sref-opts="{reload: true}">
           <i class="icon ion-ios-star"></i>
           <h2 class="menu-text text-right">לידים</h2>
         </ion-item>
