--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -833,7 +833,7 @@ top:11px;
 .item-checkbox.text-right {padding-right:60px}
 .leads-notes {height:200px;min-height: 200px}
 .white {color:white}
-.list.lead-form .item-input {padding:3px 5px 5px 3px}
+.list.lead-form .item-input {padding:3px 5px 3px 3px}
 .list.lead-form label .input-label {padding:0px 0 5px 8px;line-height: 16px;font-weight: bolder}
 
 .list.lead-form .item-input input  { ;border-bottom: 1px dotted #444;padding-right:10px}
@@ -841,7 +841,6 @@ top:11px;
     max-height: 300px;
 }
 .fancy-select .item-note {padding-left:30px ;font-weight:bolder ;color:black}
-label.input-error {color:red !important ;margin-top:0px;padding-top:0px}
-.fancy-header {color:red}
-.fancy-select .item {padding:12px}
+label.input-error {color:red !important ;margin-top:0px;padding-top:0px;padding-bottom: 2px;margin-bottom: 2px}
+.fancy-select .item {padding:10px}
 #extra-lead-form label { float:right}
