--- a/www/templates/devmenu.html
+++ b/www/templates/devmenu.html
@@ -11,6 +11,9 @@
   <ion-content class="pele-background">
 
     <div class="list">
+      <a class="item  item-icon-right" ui-sref="app.dev.network">
+          <i class="icon ion-trash-b"></i>
+      </a>
       <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
       <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
       ניקוי קובץ לוגים
