--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -883,4 +883,11 @@ select.select :not([multiple]) {
   }
 img.upload.thumb { width: 100%;
     height: auto;}
-.thumb-container {padding:5px;border:border: 3px dashed #DDD;background:#FFF;clear: both}
+.preview-container {margin-top:30px;min-height:100px;min-width:100px;clear: both;display:inline-table}
+.preview-container > img {border:4px solid #fff}
+.margin-top-10 {margin-top:10px}
+.margin-top-5 {margin-top:5px}
+.margin-top-15 {margin-top:15px}
+a i.icon.icon-lg { font-size:50px;color:white}
+a.white {color:white}
+.icon.icon-top {display:block}
