--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -359,7 +359,7 @@ dic.title {
 }
 
 
-input[type=tel] {
+input[type=__tel] {
   -webkit-text-security: disc;
 }
 p.under {
@@ -881,13 +881,16 @@ select.select :not([multiple]) {
     max-width: 100%;
     outline: none;
   }
-img.upload.thumb { width: 100%;
-    height: auto;}
+
 .preview-container {margin-top:30px;min-height:200px;min-width:200px;clear: both;display:inline-table}
-.preview-container > img {border:4px solid #fff}
+.preview-container  img {border:4px solid #fff;height:200px;width:auto}
 .margin-top-10 {margin-top:10px}
 .margin-top-5 {margin-top:5px}
 .margin-top-15 {margin-top:15px}
 a i.icon.icon-lg { font-size:50px;color:white}
 a.white {color:white}
 .icon.icon-top {display:block}
+.item.image-title { padding: 3px;
+    border: 1px solid #000;
+    border-radius: 3px;
+  }
