--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -897,3 +897,4 @@ a.white {color:white}
 .upload-success h3,.upload-success h2 {color:white;padding:5px 20px 5px 20px}
 .upload-success img {height:160px}
 .lead-footer.bar-footer{height:auto}
+.leads-report .item {padding:10px}
