--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -902,7 +902,7 @@ a.white {color:white}
     border: 1px solid #000;
     border-radius: 3px;
   }
-.upload-success h3,.upload-success h2 {color:white;padding:5px 20px 5px 20px}
+.upload-success h3,.upload-success h2 , .upload-success h4{color:white;padding:5px 20px 5px 20px}
 .upload-success img {height:160px}
 .lead-footer.bar-footer{height:auto}
 .lead-footer.bar-footer .button {margin:0;margin-left:5px;border-radius: 6%;    font-size: 16px;padding-right:10px}
