--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -895,6 +895,10 @@ select.select :not([multiple]) {
 .margin-top-10 {margin-top:10px}
 .margin-top-5 {margin-top:5px}
 .margin-top-15 {margin-top:15px}
+.margin-bottom-10 {margin-bottom:10px}
+.margin-bottom-5 {margin-bottom:5px}
+.margin-bottom-15 {margin-bottom:15px}
+
 a i.icon.icon-lg { font-size:50px;color:white}
 a.white {color:white}
 .icon.icon-top {display:block}
