--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -921,3 +921,5 @@ a.white {color:white}
 .leads-report .item {padding:10px}
 .lead-actions-sheet  button {border-top:1px solid #CCC !important;font-size:15px;}
 .lead-actions-sheet  button.destructive {color:red !important;font-size:16px !important}
+#task_view td.label{font-size:16px;font-weight:bolder;padding:5px;}
+#task_view td.info{font-size:16px;padding-left:15px}
