--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -13,13 +13,16 @@
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
     </ion-refresher>
 
-    <div class="row row-bottom">
-      <div class="col"></div>
-    </div>
+    <ion-list ng-if="0" id="new-main-menu">
+      <ion-item ng-repeat="app in feeds_categories.menuItems" ng-click="forwardToApp(app)" class="item-icon-left text-right menu-item">
+        <img class="icon" ng-src="{{app.Image}}" /> {{app.DisplayName}}
+      </ion-item>
+    </ion-list>
+
     <!-- start ng-repeat -->
     <div class="apps-front-menu">
       <div class="menu-item" ng-repeat="category in feeds_categories.menuItems">
-        <button ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName,category)" class="button button-large button-stable button-block text-right">
+        <button ng-click="forwardToApp(category)" class="button button-large button-stable button-block text-right">
          <img class="menu-item-icon" ng-src="{{category.Image}}" />    {{category.DisplayName}}
         </button>
       </div>
