--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -13,38 +13,23 @@
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
     </ion-refresher>
 
-    <ion-list ng-if="0" id="new-main-menu">
-      <ion-item ng-repeat="app in feeds_categories.menuItems" ng-click="forwardToApp(app)" class="item-icon-left text-right menu-item">
+    <ion-list ng-if="tilesEnabled" id="new-main-menu">
+      <ion-item ng-show="latestParent" ng-click="remenu(latestParent)">
+        {{visibleParent}} - latest:{{latestParent}}
+      </ion-item>
+      <ion-item ng-show="app.parent===visibleParent" ng-repeat="app in feeds_categories.menuItems" ng-click="forwardToApp(app)" class="item-icon-left text-right menu-item" ng-class="app.classes">
         <img class="icon" ng-src="{{app.Image}}" /> {{app.DisplayName}}
       </ion-item>
     </ion-list>
 
-    <!-- start ng-repeat -->
-    <div class="apps-front-menu">
+    <div ng-if="!tilesEnabled" class="apps-front-menu">
       <div class="menu-item" ng-repeat="category in feeds_categories.menuItems">
         <button ng-click="forwardToApp(category)" class="button button-large button-stable button-block text-right">
          <img class="menu-item-icon" ng-src="{{category.Image}}" />    {{category.DisplayName}}
         </button>
       </div>
     </div>
-    <div ng-if="0" class="row row-bottom" ng-repeat="category in feeds_categories.menuItems">
-      <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName,category)" ng-model="btn_class.on_release" on-touch="category.PUSH_FLAG = !category.PUSH_FLAG" on-release="category.PUSH_FLAG = !category.PUSH_FLAG">
-        <div class="col col-10"></div>
-        <div class="col col-80 item item-icon-right {{pushBtnClass(category.PUSH_FLAG)}}">
-          <div class="row row-center ">
-            <a class="col col-20">
-              <img ng-src="{{category.Image}}" spinner-on-load class="float-right " style="max-width:100%;height:auto; vertical-align: middle" >
-            </a>
-            <a class="col col-80">
-              <p class="description">{{category.DisplayName}}</p>
-            </a>
-          </div>
-        </div>
 
-        <div class="col col-10"></div>
-
-      </div>
-    </div>
     <!-- end start ng-repeat -->
   </ion-content>
 </ion-view>
