--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -587,14 +587,7 @@ a.triangle-isosceles.small {
 table.mix-alpha-numeric-table tr td {padding-left:5px}
 div#main-apps-menu div.row-bottom {margin-top:15px}
 /* fix ios 10 title  proble*/
-.platform-ios .app-top-bar *  {background-color: #0160a0 !important}
-.platform-ios .nav-bar-title {background-color: #0160a0 !important}
-.platform-ios .nav-bar-title .bar .title {margin-top:0 !important;background-color: #0160a0 !important;}
-
-.platform-ios  .scroll-content { 
-  pointer-events: auto !important; /*fix scroll lock on ios12.2*/ 
-}
-
+.platform-ios .nav-bar-title .bar .title {margin-top:0 !important}
 .docs-menu-head {font-weight:bolder}
 .docs-menu-item-title {font-size: 16px;font-weight:bolder}
 .docs-menu .item.docs-menu-details {padding:7px 11px}
@@ -664,10 +657,6 @@ div#main-apps-menu div.row-bottom {margin-top:15px}
 
 .pel-badge.light-blue {
   background-color: #0288D1
-}
-
-.pel-badge.light-brown {
-  background-color: #A52A2A
 }
 
 .pel-badge.green {
@@ -1141,7 +1130,7 @@ grid-row-end: span 1;}
 .login-container .item.item-input input {font-size:16px}
 img.icon-md {height:40px}
 img.icon-sm {height:30px;max-height:30px;}
-#auth-methods  button span {
+#auth-modal button span {
   position:relative;top:-19px;
   margin-right:10px
 }
