--- a/www/templates/auth/ldap_login.html
+++ b/www/templates/auth/ldap_login.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="true" hide-back-button="true" ng-show="doRender">
+<ion-view cache-view="false" hide-back-button="false" ng-show="doRender">
 
   <ion-nav-title>
     <div class="bar bar-header bar-light">
@@ -7,8 +7,10 @@
     </div>
   </ion-nav-title>
   <ion-content class="pele-background" scroll="false">
- 
-    <div class="row" ng-show="activeForm && !hideAllforms">
+    <div class="text-center">
+    </div>
+    
+    <div class="row" ng-show="activeForm">
       <div class="col col-center">
         <div class="card login-container">
           <form name="" class="" novalidate>
@@ -42,7 +44,7 @@
                 <div class="item">
                     <button type="submit" class="button button-positive button-block" ng-click="doLogIn()">התחברות  </button>
                   </div>
-                  <div class="item item-text-wrap text-center error" style="color:red">
+                  <div class="item text-center error">
                    {{error}}
                   </div>
             </div>
@@ -51,44 +53,46 @@
         </div>
       </div>
     </div>
-    <div  id="auth-methods" ng-show="!activeForm && !hideAllforms" class="card pele_rtl" style="border:2px solid #CCC;border-radius:5px">
-        <div class="item item-text-wrap pele_ltr">
-            <!--button ng-click="closeModal()" class="button-icon ion-close"></button-->
-            <h2 class="text-center"><strong>יש לבחור שיטת זיהוי</strong></h2>             
-            <div class="item no-border">
-              <button ng-click="setAuthMethod('pincode')" class="text-right button-block button-clear button-dark">
-                  <span class="">SMS סיסמא חד פעמית ב</span>
-                  <img class="icon-md" src="img/new_icons/pincode.png"></button>
-            </div>
-            <div class="item text-center pele_rtl" ng-show="!bioCap">
-              <strong> במידה ומכשירך תומך בזיהוי ביומטרי, ניתן להפעיל את הפונקציונליות במכשיר על מנת לאפשר מימוש זיהוי ביומטרי באפליקציה.</strong>
-            </div>
-            <div class="item" ng-show="bioCap=='finger'">
-            <button ng-click="setAuthMethod('fingerprint')" class="text-right button-block button-clear button-dark" >
-<span>                טביעת אצבע</span>
-              <img class="icon-md" src="img/new_icons/fingerprint.png"> </button>
-          </div>
-          <div class="item" ng-show="bioCap=='bio'">
-              <button ng-click="setAuthMethod('bio')" class="text-right button-block button-clear button-dark" >
-          <span>זיהוי ברומטרי</span>
-                <img class="icon-md" src="img/new_icons/fingerprint.png"> </button>
-            </div>            
-          <div class="item" ng-show="bioCap=='face'">
-            <button ng-click="setAuthMethod('faceid')" class="text-right button-block button-clear button-positive">
-              <span>זיהוי פנים</span>
-                <img class="icon-md" src="img/new_icons/faceid.png"></button>
-          </div>
-          <div ng-if="0" class="item">
-              <button ng-click="setAuthMethod(null)" class="text-right button-block button-clear button-dark">
-                  <span class=""> ללא זיהוי מקוצר</span>
-                  <img class="icon-md" src="img/new_icons/login_form.png"></button>
-            </div>
-        </div>
-      </div>
-      
   </ion-content>
   <script type="text/ng-template" id="authMethods.html">
     <ion-content  id="auth-modal" padding="true" style="margin:60px 25px 25px 25px" ng-show="doRender">
-     </ion-content>
+
+        <div  class="card pele_rtl" style="border:2px solid #CCC;border-radius:5px">
+          <div class="item item-text-wrap pele_ltr">
+              <button ng-click="closeModal()" class="button-icon ion-close"></button>
+              <h2 class="text-center"><strong>יש לבחור שיטת זיהוי</strong></h2>             
+              <div class="item no-border">
+                <button ng-click="setAuthMethod('pincode')" class="text-right button-block button-clear button-dark">
+                    <span class="">SMS סיסמא חד פעמית ב</span>
+                    <img class="icon-md" src="img/new_icons/pincode.png"></button>
+              </div>
+              <div class="item text-center pele_rtl" ng-show="!bioCap">
+                <strong> במידה ומכשירך תומך בזיהוי ביומטרי, ניתן להפעיל את הפונקציונליות במכשיר על מנת לאפשר מימוש זיהוי ביומטרי באפליקציה.</strong>
+              </div>
+              <div class="item" ng-show="bioCap=='finger'">
+              <button ng-click="setAuthMethod('fingerprint')" class="text-right button-block button-clear button-dark" >
+<span>                טביעת אצבע</span>
+                <img class="icon-md" src="img/new_icons/fingerprint.png"> </button>
+            </div>
+            <div class="item" ng-show="bioCap=='bio'">
+                <button ng-click="setAuthMethod('bio')" class="text-right button-block button-clear button-dark" >
+            <span>זיהוי ברומטרי</span>
+                  <img class="icon-md" src="img/new_icons/fingerprint.png"> </button>
+              </div>            
+            <div class="item" ng-show="bioCap=='face'">
+              <button ng-click="setAuthMethod('faceid')" class="text-right button-block button-clear button-positive">
+                <span>זיהוי פנים</span>
+                  <img class="icon-md" src="img/new_icons/faceid.png"></button>
+            </div>
+            <div ng-if="0" class="item">
+                <button ng-click="setAuthMethod(null)" class="text-right button-block button-clear button-dark">
+                    <span class=""> ללא זיהוי מקוצר</span>
+                    <img class="icon-md" src="img/new_icons/login_form.png"></button>
+              </div>
+          </div>
+        </div>
+        
+      </ion-content>
   </script>
+
 </ion-view>
